Fri Oct 19 10:20:10 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: add new option `--ruby-arg [ARG]'
	  which is passed as a launch parameter for each ruby's execution.
	  ($ ruby [ARG] [File])

Thu Oct 18 18:42:35 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_send_simple): move the location of
	  `opt_send_simple' to the place near `send' definition.
	  (to take care about icache locality).

Thu Oct 18 18:29:25 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (send): remove unused condition.
	  This condition will be true after r37258.

	* vm_insnhelper.c (vm_caller_setup_args): remove `UNLIKELY' on
	  checking blockiseq (it seems `LIKELY').

Thu Oct 18 17:31:58 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_send_simple): introduce new instruction used
	  when no need to care about block and splat.

	* compile.c: use the `opt_send_simple' instruction.

Thu Oct 18 16:44:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_add_method_cfunc, rb_add_method_cfunc_frameless):
	  check arity earlier at definition time.

Thu Oct 18 15:11:31 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: add `inline' keyword to several functions.
	  Compilers (gcc) are conservative than I expected.

Thu Oct 18 15:01:15 2012  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: add a decl. of
	  `rb_define_frameless_method()'.

Thu Oct 18 14:31:17 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (new_callinfo): set a temporary index of callinfo
	  (used in `iseq_set_sequence()') to rb_call_info_t::aux::index.
	  rb_call_info_t::argc is initialiesed by same value of
	  rb_call_info_t::orig_argc.

Thu Oct 18 14:11:08 2012  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_define_frameless_method): rename from
	  rb_define_method_fast(). Defined method with this C API
	  does not make a method frame. It is bit lightweight than
	  ordinal C functions. Now only 0 or 1 argc are permitted.
