@@ -1,5 +1,0 @@
-i = 0
-while i<800000 # benchmark loop 2
-  i += 1
-  a = 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9
-end
