@@ -1,3 +1,8 @@
+Fri Oct 19 10:22:26 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/bmx_temp.rb: removed.
+	  This file should not be in repository.
+
 Fri Oct 19 10:20:10 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/driver.rb: add new option `--ruby-arg [ARG]'
